# opensciencelabs.github.io

./: .editorconfig  .gitignore  .makim.yaml  .pre-commit-config.yaml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _quarto.yml  config.toml  custom-markdown.tpl  feed_rss_created.xml  feed_rss_updated.xml  funding.json  index.css  index.html  index.json  index.xml  mkdocs.yml  netlify.toml  pyproject.toml  sitemap.xml
.wellKnown/: funding-manifest-urls
about/: index.html
about-osl/: index.html
about-us/: index.html
acknowledges/: index.html  index.xml
affiliations/: index.html
archetypes/: default.md
archives/: index.html
blog/: index.html  index.xml
calendar/: index.html
careers/: index.html
categories/: index.html  index.xml
coc/: index.html
conda/: dev.yaml
contact/: index.html
content/: _index.md  about.md  calendar.html  discord.html  facebook.html  twitter.html  youtube.html
css/: blog.css  content.css  index.css  partners.css  search.css  styles.36286c0c2f50b442d4138df74664dd757fd89eb77aaa8a1350ef263aeb7084a26ae2e39545709914e7f2f46158a4ffaf6646282316508f1467e05918a9e0bdff.css  styles.87df07b1e1bda89abe9fa0aef9eb91c543483040c7b57e3f3eb94e17e62491867eb2433280c3dac1aeeaf5aa14bfc1d4153e5f5bfe4f193ce6acc4fee1e281d2.css  styles.9220cf0381f57b1ce28f3b048512a19f8d34220083c18304318de8529fe8a9d11998b8f048024e6d5057f7d08558d1f413b38a88d4a076935145adb0bf4e6e4c.css  styles.css  styles.css.map  team.css
csv_folder/: counting_cats.csv  counting_tags.csv  csv_links.csv  csv_tags.csv  new_cat_tags.csv  new_tags.csv
discord/: index.html
donate/: index.html
es/: index.html  sitemap.xml
events/: index.html
facebook/: index.html
faq/: index.html
funding.json/: index.html
governance/: index.html
guidelines/: index.html  index.xml
js/: index.json  osl-search.js  search.min.53304306aa9c956dc91ef60f15bdae8da9165350605f3ae643da71c003be9a7c39e2925b844b3b7ea71bc42287f23c61dcae84ec10ac127dfcff0b568a2d566d.js  search.min.dccee927a4cb3e64cbeb8bee9751586dfbfc5f44650cdf7da15aa00f0bf4474897dee089b4dc63d8cc3a48649f50783154ee4daf6bae5f57b71e6e295cbbd35b.js  search.min.js  theme.js
layouts/: index.html
learning/: index.html
linkedin/: index.html
mentoring/: index.html  index.xml
migrations scripts/: _config.py  check_links.py  csv_creator.py  csv_setter.py  get_tags.py  integrador.py  links_mod.py  metadata_mod.py
my-project/: README.md  package.json  tsconfig.json
opportunities/: index.html
pages/: about.pt.md  funding.json  index.md  linkedin.html  search.md
partners/: index.html
partnership/: index.html
programs/: index.html  index.xml
projects/: index.html
pt/: 404.html  index.html  (+3 more)
(+1547 files in other folders)
